updated cdn vue

--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet"> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <title>js-todo-vue</title>
-    <link rel="stylesheet" href="./assets/css/master.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" /><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
-</head>
-<body>
-   
-   
-
-        <!-- TODOS -->
+    <link rel="stylesheet" href="./assets/css/master.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+      integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- TODOS -->
 
     <div id="root">
       <ul class="task">
@@ -23,32 +36,35 @@
           <div class="titolo_task">
             <h2>To Do List</h2>
           </div>
-      </div>
-  
-        <li v-for= "todo in todosComputato">
-            <span class= "titolo" :class="(todo.status == 'done') ? 'strike' : '' "  >{{ todo.title }}</span>
-            <span 
-                v-if= "todo.status != 'done'"
-                class="check" 
-                @click="check(todo)">
-                <i class="fas fa-check-square" ></i></span>
-            <span v-if="todo.status != 'done'" class="edit" @click="edit(todo)"><i class="fas fa-edit"></i></span>
-            <span v-if="todo.status == 'done'" @click="remove(todo)"><i class="fas fa-minus-square"></i></span>
+        </div>
+
+        <li v-for="todo in todosComputato">
+          <span class="titolo" :class="(todo.status == 'done') ? 'strike' : '' "
+            >{{ todo.title }}</span
+          >
+          <span v-if="todo.status != 'done'" class="check" @click="check(todo)">
+            <i class="fas fa-check-square"></i
+          ></span>
+          <span v-if="todo.status != 'done'" class="edit" @click="edit(todo)"
+            ><i class="fas fa-edit"></i
+          ></span>
+          <span v-if="todo.status == 'done'" @click="remove(todo)"
+            ><i class="fas fa-minus-square"></i
+          ></span>
         </li>
 
-          <input v-model="inputTodo" 
-            id="inputTitolo" 
-            placeholder="+ Add new ToDo"
-            @keyup.enter="add">
+        <input
+          v-model="inputTodo"
+          id="inputTitolo"
+          placeholder="+ Add new ToDo"
+          @keyup.enter="add"
+        />
 
-          <button id="add" type="button" name="button" @click= "add" >ADD</button>
+        <button id="add" type="button" name="button" @click="add">ADD</button>
       </ul>
+    </div>
 
-   </div> 
-   
-        
-    
-   <script src='https://cdn.jsdelivr.net/npm/vue'></script>
-   <script src="./assets/js/main.js"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
+    <script src="./assets/js/main.js"></script>
+  </body>
 </html>
